--- a/style.css
+++ b/style.css
@@ -1,1 +1,62 @@
-s
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+}
+
+header > div:nth-of-type(1) {
+  width: 100%;
+  height: 25px;
+  background-color: black;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+  font-weight: 300;
+}
+
+.searchBar {
+  width: 100%;
+  height: 50px;
+  background-color: rgb(188, 188, 188);
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.searchBar > div {
+  position: relative;
+}
+
+.searchBar > div > img {
+  position: absolute;
+  top: 50%;
+  left: 2%;
+  transform: translateY(-50%);
+}
+
+.inputSearch {
+  width: 300px;
+  height: 30px;
+  border: none;
+  background-color: black;
+  color: white;
+  text-indent: 40px;
+  border-radius: 4px;
+}
+
+.inputSearch:focus-visible {
+  outline: none;
+}
+
+.inputSearch::placeholder {
+  color: rgb(188, 188, 188);
+}
+
+section {
+  width: 100%;
+  height: 300px;
+  border: 1px solid red;
+}
