--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
 }
 
 header > div:nth-of-type(1) {
+  top: 0;
   position: fixed;
   width: 100%;
   height: 25px;
@@ -65,7 +66,7 @@ header > div:nth-of-type(1) {
 }
 
 section {
-  margin-top: 30px;
+  margin-top: 70px;
   width: 100%;
   height: 100vh;
   background-color: black;
@@ -81,34 +82,74 @@ section {
 
 .product {
   width: 300px;
-  height: 400px;
+  height: 430px;
   background-color: rgb(188, 188, 188);
   border-radius: 20px;
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
-  padding: 20px;
+  /* padding: 20px; */
+  cursor: pointer;
 }
 
 .product > img {
-  width: 200px;
-  height: 200px;
-  border-radius: 20px;
-  margin-left: 30px;
-}
-
-.product > span {
+  /* width: 220px !important; */
+  width: 100%;
+  height: 220px !important;
+  /* border-radius: 20px; */
   margin-left: auto;
   margin-right: auto;
-  padding: 5px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+
+.product > span:nth-of-type(1) {
+  border-radius: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 8px;
   margin-top: 15px;
-  font-weight: 500;
+  font-weight: 400;
   font-style: italic;
-  width: fit-content;
-  background-color: white;
+  background-color: rgb(119, 118, 118);
+  color: white;
+}
+
+.product > span:nth-of-type(2) {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  font-style: italic;
+  background-color: rgb(0, 0, 0);
+  color: white;
+  padding: 8px;
+  border-radius: 20px;
+}
+
+.product > span:nth-of-type(3) {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  font-style: italic;
+  background-color: rgb(119, 118, 118);
+  color: white;
+  padding: 8px;
+  border-radius: 20px;
+}
+
+.product > span:nth-of-type(4) {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  font-style: italic;
+  background-color: rgb(0, 0, 0);
+  color: white;
+  padding: 8px;
+  border-radius: 20px;
 }
 
 footer {
+  position: fixed;
+  bottom: 0;
   width: 100%;
   height: 25px;
   background-color: black;
